Wrapper [http://www.webreference.com/programming/javascript/domwrapper/].
 
################################################

0.9.6.2
	* Fixed broken-by-typo DOMParser in Safari thanks to Just van den Broecke
	* Fixed Sarissa.getDomDocument inconsistencies between Moz/IE thanks 
	   to David Flanagan
	* Added skipCache param in Sarissa.updateContentFromURI thanks to Paul Everitt
	* Fixed XPath example errors in documentation thanks to Phil Nash
	* Fixed bug in Sarissa.updateContentFromNode() thanks to Don Hopkins
	* Enchanced documentation to work around a moz bug (xmlhttp.send(null) 
	  sends no content-length header) thanks to Mike Branstein

0.9.6.1
    * Fixed bug in Sarissa.updateContentFromNode thanks to Franky Braem
    * Added Safari DOMParser support thanks to a wonderfull idea published 
       by Nate Steiner on his blog that utilizes the data: URI scheme and 
       Erik Arvidsson that suggested this could easily be wrapped to emulate 
       DOMParser. Many thanks to cedric for pointing out the above (between other things).
    * Removed XSLTProcessor.tranfrormToFragment (didn't work anyway)
    * Added .load support for Opera thanks to cedric
    * Added support for HTML nodes in Sarissa.serialize 
    * Tried to make Safari sniffing more strict thanks to Phil Green who pointed out spoofing is easy
    * Fixed bugs thanks to feedback by Vincenzo Alcamo

0.9.6
    * Deprecated stuff as warned in 0.9.4 ;-)
    * Big change: loadXML is no longer used, as there's no way to emulate it in Opera.
       So i just removed it directly; to load an XML string to a DOM, you have to use the 
       DOMParser object. No way to do anything like that in Safari though.
    * Added Minesweeper as first sample application, original code kindly donated by
       Sean Whalen, also maintainer of it; welcome Sean!
    * Fixed Opera and Safari issues  thanks to Phil Endecott and Conrad Chu
    * Fixed Sarissa.getText bug (ignored CDATA) thanks to Noah Bast